--- a/팀 작업물/한승훈/result.html
+++ b/팀 작업물/한승훈/result.html
@@ -21,7 +21,19 @@
             var championData = await getChampionData();
 
             // 챔피언 정보에서 입력한 이름과 일치하는 챔피언 찾기
-            var championInfo = championData.data[championName];
+            var championInfo = null;
+            if (/^[a-zA-Z]+$/.test(championName)) {
+                championName = championName.charAt(0).toUpperCase() + championName.slice(1).toLowerCase();
+                championInfo = championData.data[championName];
+            } else {
+                for (const champion of Object.values(championData.data)) {
+                    if (champion.name === championName) {
+                        console.log(champion);
+                        championInfo = champion;
+                        break;
+                    }
+                }
+            }
 
             var resultDiv = document.getElementById('result');
             if (championInfo) {
@@ -36,6 +48,7 @@
                 resultDiv.innerText = "해당하는 챔피언을 찾을 수 없습니다.";
             }
         }
+
 
         async function getChampionData() {
             var response = await fetch('https://ddragon.leagueoflegends.com/cdn/14.6.1/data/ko_KR/champion.json');
