--- a/팀 작업물/김세림/picture.html
+++ b/팀 작업물/김세림/picture.html
@@ -7,8 +7,8 @@
     <style>
         .champion-row {
             display: flex;
-            flex-wrap: wrap; /* 자식 요소들을 여러 줄에 걸쳐 표시 */
-            justify-content: space-between; /* 여백을 최대로 유지하여 요소들을 배치 */
+            flex-wrap: wrap;
+            justify-content: flex-start;
             margin-bottom: 20px;
         }
         .champion-container {
