--- a/메인 작업물/home.html
+++ b/메인 작업물/home.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>GamsamoHome</title>
+    <title>GamsamoHomePage</title>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="champion.html">Champion</a>
+                        <a class="nav-link" href="champions.html">Champions</a>
                     </li>
                 </ul>
             </div>
@@ -36,11 +37,10 @@
 
     <div class="search-bar">
         <h1 id="title">Gamsamo.gg</h1>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search" aria-label="Username"
-                aria-describedby="basic-addon1">
-            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-        </div>
+        <form action="">
+            <input type="text" placeholder="Search champion">
+            <button onclick="window.open('search.html')"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
     </div>
 
 </body>
