--- a/팀 작업물/김세림/champions.html
+++ b/팀 작업물/김세림/champions.html
@@ -118,8 +118,8 @@
 
                     // 클릭 시 상세 정보 페이지로 이동하는 이벤트 리스너 추가
                     championContainer.addEventListener('click', () => {
-                        window.location.href = `detail.html?champion=${championName}`;
-                        //상세페이지 이름 detail로 일단 작성해놓음 해당 html링크 변동시 변경해야함.
+                        window.location.href = `search.html?champion=${championName}`;
+                        //상세페이지 이름은 검색한 결과에 나오는 화면과 같게한다.
                     });
 
                     // 컨테이너에 이미지와 이름 추가
