--- a/팀 작업물/김세림/champions.html
+++ b/팀 작업물/김세림/champions.html
@@ -118,7 +118,7 @@
 
                     // 클릭 시 상세 정보 페이지로 이동하는 이벤트 리스너 추가
                     championContainer.addEventListener('click', () => {
-                        window.location.href = `search.html?champion=${championName}`;
+                        window.location.href = `result.html?name=${championName}`;
                         //상세페이지 이름은 검색한 결과에 나오는 화면과 같게한다.
                     });
 
