--- a/팀 작업물/한승훈/result.html
+++ b/팀 작업물/한승훈/result.html
@@ -4,14 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>챔피언 검색 결과</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>GamsamoSearchPage</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1>챔피언 검색 결과</h1>
-        <div id="result"></div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a id="nav-title" class="navbar-brand" href="#">Gamsamo.gg</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="champions.html">Champions</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="search-result-container">
+        <h1 id="search-title"><span>'검색어'</span>에 대한 결과</h1>
+        <div class="results" id="result">
+        </div>
     </div>
 
     <script>
@@ -19,7 +46,6 @@
             var params = new URLSearchParams(window.location.search);
             var championName = params.get('name');
             var championData = await getChampionData();
-
             // 챔피언 정보에서 입력한 이름과 일치하는 챔피언 찾기
             var championInfo = null;
             if (/^[a-zA-Z]+$/.test(championName)) {
@@ -34,15 +60,19 @@
                     }
                 }
             }
-
+            
             var resultDiv = document.getElementById('result');
             if (championInfo) {
                 // 챔피언 정보 표시
                 resultDiv.innerHTML = `
-                        <h2>${championInfo.name}</h2>
-                        <p>역할군: ${championInfo.tags.join(', ')}</p>
-                        <p>${championInfo.blurb}</p>
-                        <!-- 기타 정보들을 추가 -->
+                        <a class="result" href="champions.html">
+                            <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}">
+                            <div class="info">
+                                <p id="champion-name">${championInfo.name}</p>
+                                <p id="champion-position">역할군: ${championInfo.tags.join(', ')}</p>
+                                <p id="champion-description">${championInfo.blurb}</p>
+                            </div>
+                        </a>
                     `;
             } else {
                 resultDiv.innerText = "해당하는 챔피언을 찾을 수 없습니다.";
