--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -66,7 +66,7 @@
                 // 챔피언 정보 표시(해당부분 css필요)
                 resultDiv.innerHTML = `
                         <a class="result" href="champions.html">
-                            <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}">
+                            <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
                             <div class="info">
                                 <p id="champion-name">${championInfo.name}</p>
                                 <p id="champion-position">역할군: ${championInfo.tags.join(', ')}</p>
