--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -12,6 +12,40 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>GamsamoChampionPage</title>
+    <style>
+        .champion-row {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            /* 가로 방향 가운데 정렬 */
+            align-items: flex-start;
+            /* 세로 방향 상단 정렬 */
+            margin-bottom: 20px;
+            max-width: 1260px;
+            /* 최대 너비 설정 */
+        }
+
+        .champion-container {
+            margin-bottom: 20px;
+            margin-right: 30px;
+            /* 오른쪽 여백 추가 */
+            text-align: center;
+            color: white;
+            /* 내용을 가운데 정렬 */
+        }
+
+        .champion-img {
+            width: 100px;
+            height: auto;
+            margin-bottom: 10px;
+            cursor: pointer;
+            /* 클릭 가능한 커서로 변경 */
+        }
+
+        .champion-name {
+            font-size: 16px;
+        }
+    </style>
 </head>
 
 <body>
@@ -44,50 +78,68 @@
             <button><img src="image/bottom.webp" alt="bottom"></button>
             <button><img src="image/support.svg" alt="support"></button>
         </div>
-        <div class="champions">
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
+        <div class="champions " id="champion-images">
+
         </div>
     </div>
+    <script>
+        function displayChampionInfo() {
+            let url = 'https://ddragon.leagueoflegends.com/cdn/14.6.1/data/ko_KR/champion.json'
+            // JSON 파일 가져오기
+            fetch(url).then(res => res.json()).then(data => {
+                const champions = Object.entries(data.data); // 챔피언 이름과 정보를 함께 저장
 
+                const championImagesDiv = document.getElementById('champion-images');
+
+                let championRow; // 챔피언을 나타내는 각 행의 컨테이너
+
+                // 각 챔피언 이미지와 정보를 가져와서 화면에 표시
+                champions.forEach(([championName, championData], index) => {
+                    // 매 7번째 챔피언마다 새로운 행 생성
+                    if (index % 7 === 0) {
+                        championRow = document.createElement('div');
+                        championRow.className = 'champion-row';
+                        championImagesDiv.appendChild(championRow);
+                    }
+
+                    const championContainer = document.createElement('div');
+                    championContainer.className = 'champion-container';
+
+                    // 이미지 엘리먼트 생성
+                    const img = document.createElement('img');
+                    img.src = `http://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championName}.png`;
+                    img.alt = championName;
+                    img.className = 'champion-img';
+
+                    // 이름 엘리먼트 생성
+                    const name = document.createElement('div');
+                    name.className = 'champion-name';
+                    name.textContent = championData.name;
+                    // 클릭 시 상세 정보 페이지로 이동하는 이벤트 리스너 추가
+                    championContainer.addEventListener('click', () => {
+                        console.log(name)
+                        window.location.href = `result.html?name=${championName}`;
+                        //상세페이지 이름은 검색한 결과에 나오는 화면과 같게한다.
+                    });
+
+                    // 컨테이너에 이미지와 이름 추가
+                    championContainer.appendChild(img);
+                    championContainer.appendChild(name);
+
+                    championRow.appendChild(championContainer);
+
+                    // 마지막 챔피언일 경우에만 margin-right 제거
+                    if ((index + 1) % 7 === 0) {
+                        championContainer.style.marginRight = '0';
+                    }
+                });
+            })
+                .catch(error => console.error('데이터를 불러오는 중 오류가 발생했습니다:', error));
+        }
+        window.onload = function () {
+            displayChampionInfo();
+        };
+    </script>
 </body>
 
 </html>
