--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -1,4 +1,89 @@
-function displayChampionInfo() {
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="champions.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>GamsamoChampionPage</title>
+    <style>
+        .champion-row {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            /* 가로 방향 가운데 정렬 */
+            align-items: flex-start;
+            /* 세로 방향 상단 정렬 */
+            margin-bottom: 20px;
+            max-width: 1260px;
+            /* 최대 너비 설정 */
+        }
+
+        .champion-container {
+            margin-bottom: 20px;
+            margin-right: 30px;
+            /* 오른쪽 여백 추가 */
+            text-align: center;
+            color: white;
+            /* 내용을 가운데 정렬 */
+        }
+
+        .champion-img {
+            width: 100px;
+            height: auto;
+            margin-bottom: 10px;
+            cursor: pointer;
+            /* 클릭 가능한 커서로 변경 */
+        }
+
+        .champion-name {
+            font-size: 16px;
+        }
+    </style>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a id="nav-title" class="navbar-brand" href="#">Gamsamo.gg</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="champions.html">Champions</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="champions-container">
+        <div class="positions">
+            <button><img src="image/all.png" alt="all"></button>
+            <button><img src="image/top.svg" alt="top"></button>
+            <button><img src="image/jungle.svg" alt="jungle"></button>
+            <button><img src="image/mid.svg" alt="mid"></button>
+            <button><img src="image/bottom.webp" alt="bottom"></button>
+            <button><img src="image/support.svg" alt="support"></button>
+        </div>
+        <div class="champions " id="champion-images">
+
+        </div>
+    </div>
+    <script>
+        function displayChampionInfo() {
             let url = 'https://ddragon.leagueoflegends.com/cdn/14.6.1/data/ko_KR/champion.json';
             fetch(url)
                 .then(res => res.json())
@@ -49,3 +134,7 @@ function displayChampionInfo() {
         window.onload = function () {
             displayChampionInfo();
         };
+    </script>
+</body>
+
+</html>
