--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -65,7 +65,7 @@
             if (championInfo) {
                 // 챔피언 정보 표시(해당부분 css필요)
                 resultDiv.innerHTML = `
-                        <a class="result" href="champions.html">
+                        <a class="result">
                             <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
                             <div class="info">
                                 <p id="champion-name">${championInfo.name}</p>
