--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -36,7 +36,7 @@
     </nav>
 
     <div class="search-result-container">
-        <h1 id="search-title"><span>'검색어'</span>에 대한 결과</h1>
+        <h1 id="search-title"></h1>
         <div class="results" id="result">
         </div>
     </div>
@@ -60,10 +60,11 @@
                     }
                 }
             }
-            
+
             var resultDiv = document.getElementById('result');
+            var resultDivH = document.getElementById('search-title');
             if (championInfo) {
-                // 챔피언 정보 표시(해당부분 css필요)
+                // 챔피언 정보 표시
                 resultDiv.innerHTML = `
                         <a class="result">
                             <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
@@ -74,6 +75,9 @@
                             </div>
                         </a>
                     `;
+                resultDivH.innerHTML = `
+                <span>${championInfo.name}</span>의 정보입니다.
+                `;
             } else {
                 resultDiv.innerText = "해당하는 챔피언을 찾을 수 없습니다.";
             }
