--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -51,7 +51,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="#">Gamsamo.gg</a>
+            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
