--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -11,29 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>GamsamoSearchPage</title>
+    <title>Gamsamo.GG</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#nav").load("navigation.html");
+        });
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="champions.html">Champions</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id="nav"></div>
 
     <div class="search-result-container">
         <h1 id="search-title"></h1>
@@ -67,7 +55,7 @@
                 // 챔피언 정보 표시
                 resultDiv.innerHTML = `
                         <a class="result">
-                            <img src="https://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
+                            <img src="https://ddragon.leagueoflegends.com/cdn/14.7.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
                             <div class="info">
                                 <p id="champion-name">${championInfo.name}</p>
                                 <p id="champion-position">역할군: ${championInfo.tags.join(', ')}</p>
@@ -85,7 +73,7 @@
 
 
         async function getChampionData() {
-            var response = await fetch('https://ddragon.leagueoflegends.com/cdn/14.6.1/data/ko_KR/champion.json');
+            var response = await fetch('https://ddragon.leagueoflegends.com/cdn/14.7.1/data/ko_KR/champion.json');
             var data = await response.json();
             return data;
         }
