--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>GamsamoChampionPage</title>
+    <title>Gamsamo.GG</title>
     <style>
         .champion-row {
             display: flex;
@@ -46,28 +46,16 @@
             font-size: 16px;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#nav").load("navigation.html");
+        });
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="champions.html">Champions</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id="nav"></div>
 
     <div class="champions-container">
         <div class="positions">
@@ -151,7 +139,7 @@
         }
         function displayChampionInfo(championlist) {
 
-            let url = 'https://ddragon.leagueoflegends.com/cdn/14.6.1/data/ko_KR/champion.json';
+            let url = 'https://ddragon.leagueoflegends.com/cdn/14.7.1/data/ko_KR/champion.json';
             fetch(url)
                 .then(res => res.json())
                 .then(data => {
@@ -176,7 +164,7 @@
                             championContainer.className = 'champion-container';
 
                             const img = document.createElement('img');
-                            img.src = `http://ddragon.leagueoflegends.com/cdn/14.6.1/img/champion/${championName}.png`;
+                            img.src = `http://ddragon.leagueoflegends.com/cdn/14.7.1/img/champion/${championName}.png`;
                             img.alt = championName;
                             img.className = 'champion-img';
 
