plus champion info

--- a/메인 작업물 v.2/navigation.html
+++ b/메인 작업물 v.2/navigation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Gamsamo.GG</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
+            <a id="nav-title" class="navbar-brand">Gamsamo.gg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,4 +31,5 @@
         </div>
     </nav>
 </body>
+
 </html>
