--- a/메인 작업물 v.2/result.html
+++ b/메인 작업물 v.2/result.html
@@ -12,28 +12,16 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gamsamo.GG</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#nav").load("navigation.html");
+        });
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
-        <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="champions.html">Champions</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id = "nav"></div>
     <div class="search-result-container">
         <h1 id="search-title"></h1>
         <div class="results" id="result">
@@ -69,8 +57,39 @@
                             <img src="https://ddragon.leagueoflegends.com/cdn/14.7.1/img/champion/${championInfo.image.full}" alt="${championInfo.name}" style="width: 200px;">
                             <div class="info">
                                 <p id="champion-name">${championInfo.name}</p>
-                                <p id="champion-position">역할군: ${championInfo.tags.join(', ')}</p>
-                                <p id="champion-description">${championInfo.blurb}</p>
+                                <p id="champion-description" class="description">${championInfo.blurb}</p>
+                                <div id="role-box">
+                                    <p class="champion-info-title">Role</p>
+                                    <p class="role description">${championInfo.tags.join(', ')}</p>
+                                </div>
+                                <div id="passive-box">
+                                    <p class="champion-info-title">Passive</p>
+                                    <div id="passive">
+                                        <img src="image/garen.jpg">
+                                        <p class="description">아트록스가 대검을 내리쳐 물리 피해를 줍니다. 세 번까지 휘두를 수 있으며 각 공격은 피해 범위가 다릅니다.</p>
+                                    </div>
+                                </div>
+                                <div id="skill-box">
+                                    <p class="champion-info-title">Skills</p>
+                                    <div id="skills">
+                                        <div class="skill">
+                                            <img src="image/garen.jpg">
+                                            <p class="description">skill description</p>
+                                        </div>
+                                        <div class="skill">
+                                            <img src="image/garen.jpg">
+                                            <p class="description">skill description</p>
+                                        </div>
+                                        <div class="skill">
+                                            <img src="image/garen.jpg">
+                                            <p class="description">skill description</p>
+                                        </div>
+                                        <div class="skill">
+                                            <img src="image/garen.jpg">
+                                            <p class="description">skill description</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                     `;
