--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -46,28 +46,16 @@
             font-size: 16px;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#nav").load("navigation.html");
+        });
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-body-tertiary">
-        <div class="container-fluid">
-            <a id="nav-title" class="navbar-brand" href="home.html">Gamsamo.gg</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="champions.html">Champions</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id ="nav"> </div>
     <div class="champions-container">
         <div class="positions">
             <button onclick="filterChampionsByPosition('all')"><img src="image/all.png" alt="all"></button>
