add login & sign up

--- a/메인 작업물 v.1/champions.html
+++ b/메인 작업물 v.1/champions.html
@@ -45,46 +45,10 @@
             <button><img src="image/support.svg" alt="support"></button>
         </div>
         <div class="champions">
-            <div class="champion">
+            <a href="search.html" class="champion">
                 <img src="image/garen.jpg" alt="garen">
                 <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
-            <div class="champion">
-                <img src="image/garen.jpg" alt="garen">
-                <h5>가렌</h5>
-            </div>
+            </a>
         </div>
     </div>
 
