--- a/메인 작업물 v.1/search.html
+++ b/메인 작업물 v.1/search.html
@@ -38,39 +38,7 @@
     <div class="search-result-container">
         <h1 id="search-title"><span>'검색어'</span>에 대한 결과</h1>
         <div class="results">
-            <a class="result" href="champions.html">
-                <img src="image/garen.jpg" alt="garen">
-                <div class="info">
-                    <p id="champion-name">garen</p>
-                    <p id="champion-position">top</p>
-                    <p id="champion-description">script</p>
-                </div>
-            </a>
-            <a class="result" href="champions.html">
-                <img src="image/garen.jpg" alt="garen">
-                <div class="info">
-                    <p id="champion-name">garen</p>
-                    <p id="champion-position">top</p>
-                    <p id="champion-description">script</p>
-                </div>
-            </a>
-            <a class="result" href="champions.html">
-                <img src="image/garen.jpg" alt="garen">
-                <div class="info">
-                    <p id="champion-name">garen</p>
-                    <p id="champion-position">top</p>
-                    <p id="champion-description">script</p>
-                </div>
-            </a>
-            <a class="result" href="champions.html">
-                <img src="image/garen.jpg" alt="garen">
-                <div class="info">
-                    <p id="champion-name">garen</p>
-                    <p id="champion-position">top</p>
-                    <p id="champion-description">script</p>
-                </div>
-            </a>
-            <a class="result" href="champions.html">
+            <a class="result" href="detail.html">
                 <img src="image/garen.jpg" alt="garen">
                 <div class="info">
                     <p id="champion-name">garen</p>
