--- a/메인 작업물 v.2/champions.html
+++ b/메인 작업물 v.2/champions.html
@@ -57,13 +57,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="champions.html">Champions</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav" id = "user">
                 </ul>
             </div>
         </div>
@@ -208,9 +210,29 @@
                 .catch(error => console.error('데이터를 불러오는 중 오류가 발생했습니다:', error));
         }
         window.onload = function () {
+            // 세션에서 사용자 정보 가져오기
+            var username = sessionStorage.getItem('username');
+
+            // 사용자 정보가 있는 경우에만 화면에 표시
+            if (username) {
+                var userNav = document.getElementById('user');
+                userNav.innerHTML += '<li class="nav-item"><a class="nav-link" href="#">' + username + '님</a></li>';
+                userNav.innerHTML += '<li class="nav-item"><a class="nav-link" href="#" onclick="logout()">Logout</a></li>';
+            } else {
+                alert("로그인 후 사용이 가능합니다.");
+                // 로그인 정보가 없는 경우 로그인 페이지로 이동
+                window.location.href = 'login.html';
+            }
+
             filterChampionsByPosition('all'); // 페이지 로드 시 모든 챔피언 표시
         };
 
+        function logout() {
+            // 세션에서 사용자 정보 제거
+            sessionStorage.removeItem('username');
+            // 로그인 페이지로 이동
+            window.location.href = 'login.html';
+        }
     </script>
 </body>
 
