--- a/메인 작업물 v.2/home.html
+++ b/메인 작업물 v.2/home.html
@@ -12,6 +12,31 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gamsamo.GG</title>
+    <script>
+        // 페이지가 로드될 때 실행되는 함수
+        window.onload = function() {
+            // 세션에서 사용자 정보 가져오기
+            var username = sessionStorage.getItem('username');
+
+            // 사용자 정보가 있는 경우에만 화면에 표시
+            if (username) {
+                var userNav = document.getElementById('user');
+                userNav.innerHTML += '<li class="nav-item"><a class="nav-link" href="#">' + username + '님</a></li>';
+                userNav.innerHTML += '<li class="nav-item"><a class="nav-link" href="#" onclick="logout()">Logout</a></li>';
+            } else {
+                alert("로그인 후 사용이 가능합니다.");
+                // 로그인 정보가 없는 경우 로그인 페이지로 이동
+                window.location.href = 'login.html';
+            }
+        };
+        // 로그아웃 함수
+        function logout() {
+            // 세션에서 사용자 정보 제거
+            sessionStorage.removeItem('username');
+            // 로그인 페이지로 이동
+            window.location.href = 'login.html';
+        }
+    </script>
 </head>
 
 <body>
@@ -31,13 +56,7 @@
                         <a class="nav-link" href="champions.html">Champions</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="signup.html">Sign Up</a>
-                    </li>
+                <ul class="navbar-nav" id = "user">
                 </ul>
             </div>
         </div>
