--- a/메인 작업물 v.2/login.html
+++ b/메인 작업물 v.2/login.html
@@ -47,6 +47,8 @@
                     if (userData.id === id && userData.password === password) {
                         isUserFound = true;
                         alert("로그인 성공");
+                        // 성공 시 세션에 사용자 정보 저장
+                        sessionStorage.setItem('username', id);
                         // 로그인 성공 후 메인 페이지로 이동
                         window.location.href = "home.html";
                         return; // 함수 종료
